--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -15,10 +15,10 @@
         <img
           class="reviews-image"
           srcset="
-            ./img/reviews-john-wax-img@2x.png 2x,
-            ./img/reviews-john-wax-img.png    1x
+            ./img/reviews-john-wax-img@2x.webp 2x,
+            ./img/reviews-john-wax-img.webp    1x
           "
-          src="./img/reviews-john-wax-img.png"
+          src="./img/reviews-john-wax-img.webp"
           alt="old man"
           width="56"
           height="56"
@@ -34,10 +34,10 @@
         <img
           class="reviews-image"
           srcset="
-            ./img/reviews-victoria-romashenko-img@2x.png 2x,
-            ./img/reviews-victoria-romashenko-img.png    1x
+            ./img/reviews-victoria-romashenko-img@2x.webp 2x,
+            ./img/reviews-victoria-romashenko-img.webp    1x
           "
-          src="./img/reviews-victoria-romashenko-img.png"
+          src="./img/reviews-victoria-romashenko-img.webp"
           alt="young woman"
           width="56"
           height="56"
@@ -53,10 +53,10 @@
         <img
           class="reviews-image"
           srcset="
-            ./img/reviews-ihor-trachuck-img@2x.png 2x,
-            ./img/reviews-ihor-trachuck-img.png    1x
+            ./img/reviews-ihor-trachuck-img@2x.webp 2x,
+            ./img/reviews-ihor-trachuck-img.webp    1x
           "
-          src="./img/reviews-ihor-trachuck-img.png"
+          src="./img/reviews-ihor-trachuck-img.webp"
           alt="young man"
           width="56"
           height="56"
