--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -18,14 +18,14 @@
           <source
             media="(min-width: 320px )"
             srcset="
-              ./img/vegetables-eggplant-img.png    1x,
-              ./img/vegetables-eggplant-img@2x.png 2x
+              ./img/vegetables-eggplant-img.webp    1x,
+              ./img/vegetables-eggplant-img@2x.webp 2x
             "
           />
 
           <img
             class="vegetables-item-pictures"
-            src="./img/vegetables-eggplant-img.png"
+            src="./img/vegetables-eggplant-img.webp"
             alt="eggplant"
             width="282"
             height="243"
@@ -39,14 +39,14 @@
           <source
             media="(min-width: 320px )"
             srcset="
-              ./img/vegetables-leek-img.png    1x,
-              ./img/vegetables-leek-img@2x.png 2x
+              ./img/vegetables-leek-img.webp    1x,
+              ./img/vegetables-leek-img@2x.webp 2x
             "
           />
 
           <img
             class="vegetables-item-pictures"
-            src="./img/vegetables-leek-img.png"
+            src="./img/vegetables-leek-img.webp"
             alt="leek"
             width="282"
             height="243"
@@ -60,14 +60,14 @@
           <source
             media="(min-width: 320px )"
             srcset="
-              ./img/vegetables-mashrooms-img.png    1x,
-              ./img/vegetables-mashrooms-img@2x.png 2x
+              ./img/vegetables-mashrooms-img.webp    1x,
+              ./img/vegetables-mashrooms-img@2x.webp 2x
             "
           />
 
           <img
             class="vegetables-item-pictures"
-            src="./img/vegetables-mashrooms-img.png"
+            src="./img/vegetables-mashrooms-img.webp"
             alt="mashrooms"
             width="282"
             height="243"
@@ -81,14 +81,14 @@
           <source
             media="(min-width: 320px )"
             srcset="
-              ./img/vegetables-corn-img.png    1x,
-              ./img/vegetables-corn-img@2x.png 2x
+              ./img/vegetables-corn-img.webp    1x,
+              ./img/vegetables-corn-img@2x.webp 2x
             "
           />
 
           <img
             class="vegetables-item-pictures"
-            src="./img/vegetables-corn-img.png"
+            src="./img/vegetables-corn-img.webp"
             alt="corn"
             width="282"
             height="243"
@@ -102,14 +102,14 @@
           <source
             media="(min-width: 320px )"
             srcset="
-              ./img/vegetables-sweet-potatoes-img.png    1x,
-              ./img/vegetables-sweet-potatoes-img@2x.png 2x
+              ./img/vegetables-sweet-potatoes-img.webp    1x,
+              ./img/vegetables-sweet-potatoes-img@2x.webp 2x
             "
           />
 
           <img
             class="vegetables-item-pictures"
-            src="./img/vegetables-sweet-potatoes-img.png"
+            src="./img/vegetables-sweet-potatoes-img.webp"
             alt="sweet potatoes"
             width="282"
             height="243"
@@ -123,14 +123,14 @@
           <source
             media="(min-width: 320px )"
             srcset="
-              ./img/vegetables-carrot-img.png    1x,
-              ./img/vegetables-carrot-img@2x.png 2x
+              ./img/vegetables-carrot-img.webp    1x,
+              ./img/vegetables-carrot-img@2x.webp 2x
             "
           />
 
           <img
             class="vegetables-item-pictures"
-            src="./img/vegetables-carrot-img.png"
+            src="./img/vegetables-carrot-img.webp"
             alt="carrot"
             width="282"
             height="243"
