--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,19 +13,19 @@
       <picture class="hero-img">
         <source
           media="(min-width: 1280px)"
-          srcset="./img/hero-desk-img@2x.jpg 2x, ./img/hero-desk-img.jpg 1x"
+          srcset="./img/hero-desk-img@2x.webp 2x, ./img/hero-desk-img.webp 1x"
         />
         <source
           media="(min-width: 768px)"
-          srcset="./img/hero-tab-img@2x.jpg 2x, ./img/hero-tab-img.jpg 1x"
+          srcset="./img/hero-tab-img@2x.webp 2x, ./img/hero-tab-img.webp 1x"
         />
         <source
           media="(min-width: 375px)"
-          srcset="./img/hero-mob-img@2x.jpg 2x, ./img/hero-mob-img.jpg 1x"
+          srcset="./img/hero-mob-img@2x.webp 2x, ./img/hero-mob-img.webp 1x"
         />
         <img
           class="hero-img"
-          src="./img/hero-mob-img.jpg"
+          src="./img/hero-mob-img.webp"
           alt="Busket with vegetables"
         />
       </picture>
