--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -8,27 +8,27 @@
           <source
             media="(min-width: 1280px)"
             srcset="
-              ./img/how-it-works-desk-img@2x.jpg 2x,
-              ./img/how-it-works-desk-img.jpg    1x
+              ./img/how-it-works-desk-img@2x.webp 2x,
+              ./img/how-it-works-desk-img.webp    1x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              ./img/how-it-works-tab-img@2x.jpg 2x,
-              ./img/how-it-works-tab-img.jpg    1x
+              ./img/how-it-works-tab-img@2x.webp 2x,
+              ./img/how-it-works-tab-img.webp    1x
             "
           />
           <source
             media="(min-width: 375px)"
             srcset="
-              ./img/how-it-works-mob-img@2x.jpg 2x,
-              ./img/how-it-works-mob-img.jpg    1x
+              ./img/how-it-works-mob-img@2x.webp 2x,
+              ./img/how-it-works-mob-img.webp    1x
             "
           />
           <img
             class="how-img"
-            src="./img/how-it-works-mob-img.jpg"
+            src="./img/how-it-works-mob-img.webp"
             alt="Woman inthe kitchen"
           />
         </picture>
