--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -64,28 +64,28 @@
           <picture class="order-social-picture">
             <source
               srcset="
-                /img/your-order-desk-img.jpg    1x,
-                /img/your-order-desk-img@2x.jpg 2x
+                /img/your-order-desk-img.webp    1x,
+                /img/your-order-desk-img@2x.webp 2x
               "
               media="(min-width: 1280px)"
             />
             <source
               srcset="
-                /img/your-order-tab-img.jpg    1x,
-                /img/your-order-tab-img@2x.jpg 2x
+                /img/your-order-tab-img.webp    1x,
+                /img/your-order-tab-img@2x.webp 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/your-order-mob-img.jpg    1x,
-                /img/your-order-mob-img@2x.jpg 2x
+                /img/your-order-mob-img.webp    1x,
+                /img/your-order-mob-img@2x.webp 2x
               "
               media="(min-width: 320px)"
             />
             <img
               class="order-social-img"
-              src="/img/your-order-mob-img.jpg"
+              src="/img/your-order-mob-img.webp"
               alt="makes morning juice"
             />
           </picture>
