--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -18,11 +18,6 @@
         <a class="menu-nav-link" href="#reviews-section">Reviews</a>
       </li>
     </ul>
-    <a
-      type="button"
-      href="#your-order-section"
-      class="menu-nav-link menu-button"
-      >Shop now</a
-    >
+    <a href="#your-order-section" class="menu-nav-link menu-button">Shop now</a>
   </div>
 </div>
