--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -39,6 +39,7 @@
 .hero-image-wrap {
   position: relative;
   max-width: 375px;
+  height: auto;
 }
 
 .hero-image-wrap::after {
@@ -49,6 +50,11 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(rgba(20, 20, 20, 0.2), rgba(20, 20, 20, 0.2));
+}
+
+.hero-img {
+  width: 100%;
+  height: auto;
 }
 
 @media screen and (min-width: 375px) {
