--- a/src/css/header.css
+++ b/src/css/header.css
@@ -41,9 +41,11 @@
   height: 32px;
   stroke-width: 3px;
 }
+
 .header-navigation {
   display: none;
 }
+
 .open-menu-btn {
   width: 32px;
   height: 32px;
@@ -126,6 +128,12 @@
     min-width: 81px;
     height: 44px;
     margin: 4px 0;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-nav-item:hover {
+    border: 1px solid rgba(251, 251, 251, 1);
+    background-color: rgba(251, 251, 251, 0.2);
   }
 
   .open-menu-btn {
@@ -145,5 +153,11 @@
     min-width: 157px;
     height: 52px;
     background: #7a3145;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
+  .header-shop-button:hover {
+    transform: scale(1.05);
+  }
+
 }
