--- a/src/css/how-it-works.css
+++ b/src/css/how-it-works.css
@@ -19,6 +19,8 @@
   position: relative;
   width: calc(100% - 40px);
   margin: 0 auto;
+  border-radius: 30px;
+  overflow: hidden;
 }
 
 .how-img-wrap::after {
@@ -29,11 +31,20 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(20, 20, 20, 0.3), rgba(20, 20, 20, 0.3));
+  background-color: rgba(20, 20, 20, 0.3);
+  transition: background-color 1s cubic-bezier(0.49, 0.25, 0.39, 0.98);
+}
+
+.how-it-works-container:hover .how-img {
+  transform: scale(1.1);
+}
+
+.how-it-works-container:hover .how-img-wrap::after {
+  background-color: rgba(20, 20, 20, 0.1);
 }
 
 .how-img {
-  border-radius: 30px;
+  transition: transform 1s cubic-bezier(0.49, 0.25, 0.39, 0.98);
 }
 
 .how-bottom-wrap {
