--- a/src/css/rewiews.css
+++ b/src/css/rewiews.css
@@ -38,9 +38,26 @@
   border-radius: 24px;
   padding: 20px 16px 38px 16px;
   width: 100%;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.reviews-item:nth-child(n + 2) {
+.reviews-item:hover {
+  border: 1px solid rgba(122, 49, 69, 1);
+}
+
+.reviews-item:hover .reviews-list-text {
+  color: #040306
+}
+
+.reviews-item:hover .reviews-image {
+  transform: scale(1.3);
+}
+
+.reviews-item:hover .reviews-subtitle {
+  transform: scale(1.3);
+}
+
+.reviews-item:nth-child(n+2) {
   display: none;
 }
 
@@ -48,6 +65,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 24px;
+  transition: transform 500ms cubic-bezier(.49,.25,.39,.98);
 }
 
 .reviews-subtitle {
@@ -58,6 +76,7 @@
   text-align: center;
   color: #040306;
   margin-bottom: 8px;
+  transition: transform 500ms cubic-bezier(.49,.25,.39,.98);
 }
 
 .reviews-list-text {
@@ -67,6 +86,7 @@
   line-height: 1.28;
   text-align: center;
   color: rgba(4, 3, 6, 0.4);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
