--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -2,7 +2,7 @@
   <div class="modal-menu">
     <button class="menu-close js-close-menu" type="button">
       <svg class="menu-close-icon" width="32" height="32">
-        <use href="../img/symbol-defs.svg#mob-menu-close-mobil-icon"></use>
+        <use href="/img/symbol-defs.svg#mob-menu-close-mobil-icon"></use>
       </svg>
     </button>
     <ul class="menu-nav">
