--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
     <div class="foot-wrap-tab">
       <div class="foot-firsr-block">
         <div class="footer-icons-wrap">
-          <a class="footer-logo-links" href="./index.html">
+          <a class="footer-logo-links" name="logo-link" href="./index.html">
             <svg class="footer-links-icons kub" width="16" height="16">
               <use href="/img/symbol-defs.svg#icon-logo-vector"></use>
             </svg>
