--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
     <div class="header-menu-wrap">
       <div class="logo-text-button">
         <div class="logo-wrap">
-          <a class="header-logo-links" href="./index.html">
+          <a class="header-logo-links" name="logo-link" href="./index.html">
             <svg class="header-links-icons kub" width="16" height="16">
               <use href="/img/symbol-defs.svg#icon-logo-vector"></use>
             </svg>
@@ -15,7 +15,11 @@
           </a>
         </div>
 
-        <button type="button" class="open-menu-btn js-open-menu">
+        <button
+          type="button"
+          name="menu-open-button"
+          class="open-menu-btn js-open-menu"
+        >
           <svg class="header-menu-icon">
             <use href="/img/symbol-defs.svg#menu-open-icon"></use>
           </svg>
