--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,6 +1,10 @@
 <div class="back-menu js-menu-container">
   <div class="modal-menu">
-    <button class="menu-close js-close-menu" type="button">
+    <button
+      name="menu-close-button"
+      class="menu-close js-close-menu"
+      type="button"
+    >
       <svg class="menu-close-icon" width="32" height="32">
         <use href="/img/symbol-defs.svg#mob-menu-close-mobil-icon"></use>
       </svg>
