--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
 
         <button
           type="button"
-          name="menu-open-button"
+          id="menu-open-button"
           class="open-menu-btn js-open-menu"
         >
           <svg class="header-menu-icon">
