--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,8 @@
 
         <button
           type="button"
-          id="menu-open-button"
+          id="menu-open-btn"
+          aria-label="Menu open button"
           class="open-menu-btn js-open-menu"
         >
           <svg class="header-menu-icon">
