--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,7 +1,8 @@
 <div class="back-menu js-menu-container">
   <div class="modal-menu">
     <button
-      id="menu-close-button"
+      aria-label="Menu close button"
+      id="menu-close-btn"
       class="menu-close js-close-menu"
       type="button"
     >
