--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -42,7 +42,7 @@
             <a class="header-nav-link" href="#reviews-section">Reviews</a>
           </li>
         </ul>
-        <a href="#your-order-section" class="header-shop-button"> Shop now </a>
+        <div class="header-shop-wrap"><a href="#your-order-section" class="header-shop-button"> Shop now <svg class="shop-basket" height="24" width="24"><use href="/img/basket-icon.svg#icon-basket-icon"></use></svg></a></div>
       </nav>
     </div>
   </div>
