--- a/src/css/header.css
+++ b/src/css/header.css
@@ -104,6 +104,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-right: 210px;
   }
 
   .header-navigation {
@@ -115,6 +116,7 @@
     display: flex;
     gap: 8px;
   }
+
   .header-nav-item {
     font-weight: 500;
     font-size: 16px;
@@ -140,7 +142,18 @@
     display: none;
   }
 
+  .header-shop-wrap {
+    position: absolute;
+    right: 0;
+  }
+
   .header-shop-button {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+
     font-weight: 600;
     font-size: 18px;
     line-height: 1.11111;
@@ -153,10 +166,51 @@
     min-width: 157px;
     height: 52px;
     background: #7a3145;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .header-shop-button:hover {
-    transform: scale(1.05);
+  .header-shop-button:hover .shop-basket {
+    position: relative;
+    opacity: 1;
+      transform-origin: top center;
+      animation-name: sale;
+      animation-duration: 1s;
+      animation-fill-mode: both;
   }
+
+  @keyframes sale {
+    20% {
+        transform: rotate3d(0, 0, 1, 15deg);
+    }
+    40% {
+        transform: rotate3d(0, 0, 1, -10deg);
+    }
+    60% {
+        transform: rotate3d(0, 0, 1, 5deg);
+    }
+    70% {
+        transform: rotate3d(0, 0, 1, 0deg);
+    }
+    80% {
+        transform: rotate3d(0, 0, 1, -5deg);
+    }
+    90% {
+        transform: rotate3d(0, 0, 1, -3deg);
+    }
+    100% {
+        transform: rotate3d(0, 0, 1, 0deg);
+    }
+}
+
+  .header-shop-button:hover .basket-wrap {
+    display: block;
+  }
+
+
+  .shop-basket {
+    fill: #fbfbfb;
+    position: absolute;
+    opacity: 0;
+  }
+
+
 }
