--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,9 +9,7 @@
             <svg class="header-links-icons kub" width="16" height="16">
               <use href="/img/symbol-defs.svg#icon-logo-vector"></use>
             </svg>
-            <svg class="header-links-icons harv" width="148" height="12">
-              <use href="/img/symbol-defs.svg#icon-green-harvest"></use>
-            </svg>
+            green.harvest
           </a>
         </div>
 
