--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,9 +11,13 @@
 
 .footer-logo-links {
   display: flex;
-  align-items: center;
   gap: 4px;
   margin-bottom: 14px;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1;
+  letter-spacing: -0.01em;
 }
 
 .footer-links-icons {
@@ -108,9 +112,8 @@
     height: 18px;
   }
 
-  .footer-links-icons.harv {
-    width: 168px;
-    height: 15px;
+  .footer-logo-links {
+    font-size: 20px;
   }
 
   .footer-text {
