--- a/src/css/header.css
+++ b/src/css/header.css
@@ -23,6 +23,11 @@
   display: flex;
   align-items: center;
   gap: 4px;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1;
+  letter-spacing: -0.01em;
 }
 
 .header-links-icons {
@@ -70,16 +75,12 @@
 
   .header-logo-links {
     gap: 8px;
+    font-size: 20px;
   }
 
   .header-links-icons.kub {
     width: 18px;
     height: 18px;
-  }
-
-  .header-links-icons.harv {
-    width: 168px;
-    height: 15px;
   }
 
   .header-menu-icon {
