--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,9 +8,7 @@
             <svg class="footer-links-icons kub" width="16" height="16">
               <use href="/img/symbol-defs.svg#icon-logo-vector"></use>
             </svg>
-            <svg class="footer-links-icons harv" width="148" height="12">
-              <use href="/img/symbol-defs.svg#icon-green-harvest"></use>
-            </svg>
+            green.harvest
           </a>
         </div>
         <p class="footer-text">
