--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
     <div class="header-menu-wrap">
       <div class="logo-text-button">
         <div class="logo-wrap">
-          <a class="header-logo-links" name="logo-link" href="./index.html">
+          <a class="header-logo-links" href="./index.html">
             <svg class="header-links-icons kub" width="16" height="16">
               <use href="/img/symbol-defs.svg#icon-logo-vector"></use>
             </svg>
@@ -41,7 +41,13 @@
             <a class="header-nav-link" href="#reviews-section">Reviews</a>
           </li>
         </ul>
-        <div class="header-shop-wrap"><a href="#your-order-section" class="header-shop-button"> Shop now <svg class="shop-basket" height="24" width="24"><use href="/img/basket-icon.svg#icon-basket-icon"></use></svg></a></div>
+        <div class="header-shop-wrap">
+          <a href="#your-order-section" class="header-shop-button">
+            Shop now
+            <svg class="shop-basket" height="24" width="24">
+              <use href="/img/basket-icon.svg#icon-basket-icon"></use></svg
+          ></a>
+        </div>
       </nav>
     </div>
   </div>
