--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -52,10 +52,11 @@
   background: linear-gradient(rgba(20, 20, 20, 0.2), rgba(20, 20, 20, 0.2));
 }
 
-/* .hero-img {
+.hero-img {
+  display: block;
   width: 100%;
   height: auto;
-} */
+}
 
 @media screen and (min-width: 375px) {
   .hero-text-wrap {
@@ -126,5 +127,10 @@
   .hero-image-wrap {
     max-width: 650px;
     max-height: 800px;
+  }
+  .hero-img {
+    display: block;
+    width: 640px;
+    height: 790px;
   }
 }
