--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -45,8 +45,9 @@
           <a href="#your-order-section" class="header-shop-button">
             Shop now
             <svg class="shop-basket" height="24" width="24">
-              <use href="/img/basket-icon.svg#icon-basket-icon"></use></svg
-          ></a>
+              <use href="/img/basket-icon.svg#icon-basket-icon"></use>
+            </svg>
+          </a>
         </div>
       </nav>
     </div>
