--- a/src/css/vegetables.css
+++ b/src/css/vegetables.css
@@ -9,7 +9,7 @@
   margin-bottom: 20px;
 }
 .vegetables-title-word {
-  color: rgba(251, 251, 251, 0.3);
+  color: rgba(251, 251, 251, 0.35);
 }
 .vegetables-text {
   max-width: 335px;
@@ -48,7 +48,6 @@
   margin-bottom: 12px;
 }
 
-
 .vegetables-item-text {
   font-size: 14px;
   font-weight: 600;
@@ -58,11 +57,11 @@
   color: #141414;
   margin-bottom: 14px;
   transform: translatex(-100%);
-  transition: transform 500ms cubic-bezier(.49,.25,.39,.98);
+  transition: transform 500ms cubic-bezier(0.49, 0.25, 0.39, 0.98);
 }
 
 .vegetables-item-pictures {
-  transition: transform 1s cubic-bezier(.49,.25,.39,.98);
+  transition: transform 1s cubic-bezier(0.49, 0.25, 0.39, 0.98);
 }
 
 .vegetables-item-pictures {
