--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -52,11 +52,11 @@
   background: linear-gradient(rgba(20, 20, 20, 0.2), rgba(20, 20, 20, 0.2));
 }
 
-/* .hero-img {
+.hero-img {
   display: block;
   width: 100%;
   height: auto;
-} */
+}
 
 @media screen and (min-width: 375px) {
   .hero-text-wrap {
